2003-12-09  Albert Chu <chu11@llnl.gov>

	* src/modules/nodeupdown.c (remove_all_down_nodes): Updated for
	change in nodeupdown API version 1.3.

	* pdsh.spec.in: Added requirement that nodeupdown module requires
	whatsup >= 1.3 package.

	* : Tagged pdsh-2-0-0-pre12.

2003-12-02  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/dsh.c (dsh): Reinstall old SIGINT handler before
	freeing thread info array.

2003-12-01  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/genders.c (_read_genders): Search attribute argument
	for an attr=value pair and pass value to genders_getnodes() if found.

2003-11-24  Mark Grondona <mgrondona@llnl.gov>

	* configure.ac, config/Make-rpm.mk: Allow date-tagged builds off 
	unstable branches.

2003-11-19  Albert Chu <chu11@llnl.gov>

	* config/ac_static_modules.m4: Fixed variable names.  Variable
	names were changed in ac_qshell.m4 and ac_mqshell.m4, but never
	modified in this particular macro.

2003-11-13  Albert Chu <chu11@llnl.gov>

	* src/qsnet/mqshd.c (getifrlen): Added fix for ia64 portability
	issue.

2003-11-12  Mark Grondona <mgrondona@llnl.gov>

	* pdsh.spec.in: Only build ssh and rsh modules by default. All
	other modules must be enabled via --with <pkg> on rpmbuild 
	command line.

	* config/Make-rpm.mk: Pass options to rpmbuild via WITH_OPTIONS and
	WITHOUT_OPTIONS environment variable (instead of ``rpmargs'').

2003-11-06  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/ltdl.c, config/libtool.m4 : Update to libtool 1.4.3.

	* src/pdsh/opt.c (_show_version, _usage) : Created common function
	to print list of loaded rcmd modules.

2003-10-28  Mark Grondona <mgrondona@llnl.gov>
	
	* src/pdsh/Makefile.am : Removed QSW_LIBS from pdsh binaries.

2003-10-27  Jim Garlick <garlick@llnl.gov>

	* src/qsnet/qswutil.c (qsw_decode_cap) : Changed format
	for cap->cap_elan_type/cap->cap_spare to %hx from %x. This
 	member is unsigned short.
 
2003-10-14  Mark Grondona <mgrondona@llnl.gov>
